1.2.7: 2003-02-xx
	- Major improvement in percieved speed of menus
	- Dutch translation by Ton Kersten
	- add new options: ShowRun, ShowAbout, ShowWindowList,
          ShowLogoutSubMenu, AllowFullscreen (Ton Kersten)

1.2.7pre1: 2003-02-23
	- fix .order file handling for gnome menus (Thomas Zajic)
	- changed default theme to icedesert (Nehal Mistry)
	- fix crash in alt+tab when window closes
	- rewrite icewm.spec.in Christian W. Zuckschwerdt (zany@triq.net)
	- Belarussian translation by Hleb Valoska (el_globus@tut.by)
	- tweaked character set (CODESET) detection
	- 'Programs' menu is now invoked from menu file, not from the code
	- fixed fonts in Infadel2 theme when Xft is used

1.2.6: 2003-01-19
	- Slovenian translation by Jernej Kovacic
	- improve focus handling on non-xinerama multihead displays
	- another submenu/icon handling fix for gnome menus (Thomas Zajic)
	- added nonICCCMconfigureRequest window option workaround for 
          non ICCCM compliant applications
	- WINDOW_ROLE handling for winoptions (Stanislav Svirid)
	- fix crash in mail status checker in pop/imap configuration
	- implement startMinimized window option, similiar to startMaximized

1.2.5: 2003-01-05
	- fix lockup when doing operations through window list
	- fix compile problem --with-xpm
	- fix icesh.cc focus handling (by Todd R. Eigenschink)
	- update workaround for some TK issues
	- slow startup fix (caused by broken lazy menu loading)

1.2.4: 2003-01-03
	- fixed submenu/icon handling for gnome menus (Thomas Zajic)
	- acpi optimization (Michal Ceresna)
	- fix crash in "Tile ..."
	- fix submenu deactivation problem (reported by Bernhard Walle)
	- fix focus loss on xmms exit (reported by Bernhard Walle)
	- fix problem with restarting the wm (when icewm-menu-gnome1 not
          present)

1.2.3: 2002-12-26
	- IMPORTANT: system configuration directory changed to
          /etc/icewm (from /etc/X11/icewm or /usr/local/etc/X11/icewm).