@@ -38,6 +38,7 @@ Atom _XATOM_MWM_HINTS;
 //Atom _XA_MOTIF_WM_INFO;!!!
 Atom _XA_WM_COLORMAP_WINDOWS;
 Atom _XA_WM_CLIENT_LEADER;
+Atom _XA_WM_WINDOW_ROLE;
 Atom _XA_WINDOW_ROLE;
 Atom _XA_SM_CLIENT_ID;
 Atom _XA_CLIPBOARD;
@@ -257,6 +258,7 @@ static void initAtoms() {
         { &_XA_WM_COLORMAP_WINDOWS, "WM_COLORMAP_WINDOWS" },
         { &_XA_WM_CLIENT_LEADER, "WM_CLIENT_LEADER" },
         { &_XA_WINDOW_ROLE, "WINDOW_ROLE" },
+        { &_XA_WM_WINDOW_ROLE, "WM_WINDOW_ROLE" },
         { &_XA_SM_CLIENT_ID, "SM_CLIENT_ID" },
         { &_XATOM_MWM_HINTS, _XA_MOTIF_WM_HINTS },
         { &_XA_KWM_WIN_ICON, "KWM_WIN_ICON" },
