@@ -3,6 +3,8 @@
 	- Dutch translation by Ton Kersten
 	- add new options: ShowRun, ShowAbout, ShowWindowList,
           ShowLogoutSubMenu, AllowFullscreen (Ton Kersten)
+	- support WM_WINDOW_ROLE, too
+	- fix detection of netwm hints for some apps
 
 1.2.7pre1: 2003-02-23
 	- fix .order file handling for gnome menus (Thomas Zajic)
